# anvil

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  main.anv  syntax.anv
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  ast.cpp  compiler.cpp  dis.cpp  lexer.cpp  object.cpp  parser.cpp  sema.cpp  strtable.cpp  vm.cpp
src/include/ast/: ast.hpp  node.hpp
src/include/compiler/: block.hpp  bytecode.def  bytecode.hpp  compiler.hpp
src/include/dis/: dis.hpp
src/include/lexer/: lexer.hpp
src/include/parser/: parser.hpp
src/include/sema/: inst.hpp  sema.hpp
src/include/soa/: soa.hpp
src/include/strpool/: strpool.hpp
src/include/strtable/: strtable.hpp
src/include/token/: token.hpp
src/include/utils/: defer.hpp  die.hpp
src/include/vm/: builtins.hpp  object.hpp  vm.hpp
src/utils/: CMakeLists.txt  soa.cpp  strpool.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  compiler_test.cpp  lexer_test.cpp  parser_test.cpp  vm_test.cpp
tests/utils/: CMakeLists.txt  strpool_test.cpp
